<resources>
    <string name="app_name">Roundnet Stat Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="newGameTitle">Create Game</string>
    <string name="newGameToolTip">You can return here to edit at any time</string>
    <string name="title_activity_record_game">Record Game</string>
    <string name="recordGameHeader">Record Your Game</string>
    <string name="place_holder">place_holder</string>
    <string name="vs">VS</string>
    <string name="title_activity_home">Home</string>
    <string name="view_games">View Games</string>
    <string name="view_teams">View Teams</string>
    <string name="view_players">View Players</string>
    <string name="title_activity_view_games">View Games</string>
    <string name="title_activity_game_details">Game Details</string>
    <string name="return_home">Return Home</string>
    <string name="who_serve_tool_tip">Who is serving?\nWe will only ask this once per team.</string>
    <string name="clean">Clean Serve</string>
    <string name="fault">Service Fault</string>
    <string name="who_touch">Keep track of who touches the ball</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="error">Error</string>
    <string name="service_fault">Service Fault</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_create_player">CreatePlayerActivity</string>
    <string name="title_activity_select_player">SelectPlayerActivity</string>
    <string name="title_activity_team_details">TeamDetailsActivity</string>
    <string name="title_activity_select_team">SelectTeamActivity</string>
</resources>
