<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    android:background="@color/background"
    tools:showIn="@layout/activity_home">

    <Button
        android:id="@+id/viewGamesButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_selector"
        android:onClick="viewMyGames"
        android:text="@string/view_games"
        app:layout_constraintBottom_toTopOf="@+id/selectTeamButton"
        app:layout_constraintEnd_toEndOf="@+id/selectTeamButton"
        app:layout_constraintStart_toStartOf="@+id/selectTeamButton" />

    <Button
        android:id="@+id/deleteButton"
        android:background="@drawable/button_selector"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:onClick="deleteAllGames"
        android:text="DELETE EVERYTHING"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectTeamButton"
        android:background="@drawable/button_selector"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:onClick="selectTeamOnClick"
        android:text="@string/view_teams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectPlayerButton"
        android:background="@drawable/button_selector"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:onClick="selectPlayerOnClick"
        android:text="@string/view_players"
        app:layout_constraintEnd_toEndOf="@+id/selectTeamButton"
        app:layout_constraintStart_toStartOf="@+id/selectTeamButton"
        app:layout_constraintTop_toBottomOf="@+id/selectTeamButton" />
</androidx.constraintlayout.widget.ConstraintLayout>